--- a/css/demo.css
+++ b/css/demo.css
@@ -172,3 +172,51 @@ background-image: url();
     color: #06DDF5;
 }
 
+
+.hint {
+  
+    display: none;
+
+   
+    position: fixed;
+
+    color: #585555;
+    text-align: center;
+
+    font-size: 32px;
+    padding: 20px;
+
+    z-index: 100;
+
+
+    opacity: 0;
+
+    
+    -webkit-transition: opacity 1s, -webkit-transform 0.5s 1s;
+    -moz-transition:    opacity 1s,    -moz-transform 0.5s 1s;
+    -ms-transition:     opacity 1s,     -ms-transform 0.5s 1s;
+    -o-transition:      opacity 1s,      -o-transform 0.5s 1s;
+    transition:         opacity 1s,         transform 0.5s 1s;
+}
+
+
+.impress-enabled .hint { display: block }
+
+.impress-on-bored .hint {
+    opacity: 1;
+
+    -webkit-transform: translate(-600px,-400px);
+    -moz-transform:    translate(-600px,-400px);
+    -ms-transform:    translate(-600px,-400px);
+    -o-transform:     translate(-600px,-400px);
+    transform:         translate(-600px,-400px);
+
+    -webkit-transition: opacity 1s 5s, -webkit-transform 0.5s 4.5s;
+    -moz-transition:    opacity 1s 5s,    -moz-transform 0.5s 4.5s;
+    -ms-transition:     opacity 1s 5s,     -ms-transform 0.5s 4.5s;
+    -o-transition:      opacity 1s 5s,      -o-transform 0.5s 4.5s;
+    transition:         opacity 1s 5s,         transform 0.5s 4.5s;
+}
+
+
+
